--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body>
+<body background="background.jpg">
 <center>
     <h3 class="btn btn-info heading">Realtime Image Identification
   <hr>
@@ -23,14 +23,29 @@
       Model is trained on
       <br>
       <div class="btn btn-warning heading_div2">
-        Phone | Spoon | Water Bottle | Watch
+        Mom | Dad | Brother
       </div>
     </div>
   </center>
 </h3>
+<br><br>
+
+
+<p class="btn btn-warning result_para_tag">Object: 
+  <span id="result_object_name"></span>
+</p>
+<br><br>
+<p class="btn btn-warning result_para_tag">Accuracy:
+  <span id="result_object_accuracy"></span>
+</p>
 </center>
 
+<div class="copy_right_footer">
+  Developed by - Vinita
+</div>
 <script src="main.js"></script>
 </body>
 
 </html>
+
+
